// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`username/projectName success 1`] = `
{
  "projectId": "abc/hello-world",
  "servicePath": "/",
  "version": "latest",
}
`;

exports[`username/projectName success 2`] = `
{
  "projectId": "a16z/foo-bar",
  "servicePath": "/",
  "version": "latest",
}
`;

exports[`username/projectName success 3`] = `
{
  "projectId": "foodoo/foo-bar",
  "servicePath": "/",
  "version": "latest",
}
`;

exports[`username/projectName success 4`] = `
{
  "projectId": "u/foobar123-yo",
  "servicePath": "/",
  "version": "latest",
}
`;

exports[`username/projectName success 5`] = `
{
  "projectId": "abc/hello-world",
  "servicePath": "/",
  "version": "latest",
}
`;

exports[`username/projectName/servicePath success 1`] = `
{
  "projectId": "u/foo-bar",
  "servicePath": "/foo",
  "version": "latest",
}
`;

exports[`username/projectName/servicePath success 2`] = `
{
  "projectId": "a/foo-bar",
  "servicePath": "/foo_123",
  "version": "latest",
}
`;

exports[`username/projectName/servicePath success 3`] = `
{
  "projectId": "foo/foobar123-yo",
  "servicePath": "/foo_bar_BAR_901",
  "version": "latest",
}
`;

exports[`username/projectName/servicePath success 4`] = `
{
  "projectId": "foo/foobar123-yo",
  "servicePath": "/foo/bar/123/456",
  "version": "latest",
}
`;

exports[`username/projectName@deployment success 1`] = `
{
  "deploymentHash": "3d2e0fd5",
  "deploymentId": "abc/hello-world@3d2e0fd5",
  "projectId": "abc/hello-world",
  "servicePath": "/",
}
`;

exports[`username/projectName@deployment success 2`] = `
{
  "projectId": "a16z/foo-bar",
  "servicePath": "/",
  "version": "f673db32c",
}
`;

exports[`username/projectName@deployment success 3`] = `
{
  "projectId": "foodoo/foo-bar",
  "servicePath": "/",
  "version": "f673db32c",
}
`;

exports[`username/projectName@deployment success 4`] = `
{
  "deploymentHash": "673db32c",
  "deploymentId": "u/foobar123-yo@673db32c",
  "projectId": "u/foobar123-yo",
  "servicePath": "/",
}
`;

exports[`username/projectName@deployment success 5`] = `
{
  "deploymentHash": "01234567",
  "deploymentId": "username/foo-bar@01234567",
  "projectId": "username/foo-bar",
  "servicePath": "/",
}
`;

exports[`username/projectName@deployment/servicePath success 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentId": "username/foo-bar@01234567",
  "projectId": "username/foo-bar",
  "servicePath": "/foo",
}
`;

exports[`username/projectName@deployment/servicePath success 2`] = `
{
  "deploymentHash": "abc123lz",
  "deploymentId": "username/foo-bar@abc123lz",
  "projectId": "username/foo-bar",
  "servicePath": "/foo",
}
`;

exports[`username/projectName@deployment/servicePath success 3`] = `
{
  "deploymentHash": "01234567",
  "deploymentId": "username/foobar123-yo@01234567",
  "projectId": "username/foobar123-yo",
  "servicePath": "/foo_bar_BAR_901",
}
`;

exports[`username/projectName@deployment/servicePath success 4`] = `
{
  "deploymentHash": "01234567",
  "deploymentId": "username/foobar@01234567",
  "projectId": "username/foobar",
  "servicePath": "/foo/bar/123/456",
}
`;

exports[`username/projectName@version success 1`] = `
{
  "projectId": "abc/hello-world",
  "servicePath": "/",
  "version": "1.0.3",
}
`;

exports[`username/projectName@version success 2`] = `
{
  "projectId": "a16z/foo-bar",
  "servicePath": "/",
  "version": "latest",
}
`;

exports[`username/projectName@version success 3`] = `
{
  "projectId": "a16z/foo-bar",
  "servicePath": "/",
  "version": "dev",
}
`;

exports[`username/projectName@version success 4`] = `
{
  "projectId": "foodoo/foo-bar",
  "servicePath": "/",
  "version": "1.0.1",
}
`;

exports[`username/projectName@version success 5`] = `
{
  "projectId": "u/foobar123-yo",
  "servicePath": "/",
  "version": "3.2.2234",
}
`;

exports[`username/projectName@version success 6`] = `
{
  "projectId": "username/foo-bar",
  "servicePath": "/",
  "version": "1.0.3",
}
`;

exports[`username/projectName@version/servicePath success 1`] = `
{
  "projectId": "username/foo-bar",
  "servicePath": "/foo",
  "version": "latest",
}
`;

exports[`username/projectName@version/servicePath success 2`] = `
{
  "projectId": "username/foo-bar",
  "servicePath": "/foo",
  "version": "dev",
}
`;

exports[`username/projectName@version/servicePath success 3`] = `
{
  "projectId": "username/foo-bar",
  "servicePath": "/foo",
  "version": "1.0.0",
}
`;

exports[`username/projectName@version/servicePath success 4`] = `
{
  "projectId": "username/foobar123-yo",
  "servicePath": "/foo_bar_BAR_901",
  "version": "0.0.1",
}
`;

exports[`username/projectName@version/servicePath success 5`] = `
{
  "projectId": "username/foobar123-yo",
  "servicePath": "/foo/bar/123-456",
  "version": "0.0.1",
}
`;
